Fix wrapping of theme headers

--- a/src/components/Home/ThemeHeading.css
+++ b/src/components/Home/ThemeHeading.css
@@ -14,7 +14,6 @@
 
 .title {
   display: block;
-  white-space: nowrap;
   border: 4px solid lime;
   pointer-events: all;
   color: lime;
